--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -7,7 +7,7 @@
     android:background="@color/purple_200"
     android:orientation="vertical"
 
-    tools:context=".fragment.HistoryFragment">
+    tools:context=".MainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recucleview"
