--- a/app/src/main/res/layout/fragment_love.xml
+++ b/app/src/main/res/layout/fragment_love.xml
@@ -2,37 +2,75 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp"
-    android:gravity="center"
-    tools:context=".fragment.LoveFragment">
+    android:padding="12dp"
+    android:layout_height="match_parent"
+    android:background="@drawable/ic_background"
+    tools:context=".love.LoveFragment">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/ic_love"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Love Calculator"
+        android:textSize="32sp"
+        android:textColor="@color/pink"
+        android:layout_margin="24dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="First Name"
+        android:layout_marginBottom="12dp"
+        android:textSize="24sp"
+        android:textColor="@color/purple_200"
+        />
+
+    <EditText
+        android:id="@+id/first_et"
+        android:maxLines="1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/corner"
+        android:padding="12dp"
+        android:hint="You"/>
+
+    <TextView
+        android:layout_marginVertical="12dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Second Name"
+        android:textSize="24sp"
+        android:textColor="@color/purple_200"
+        />
+
+    <EditText
+        android:id="@+id/second_et"
+        android:maxLines="1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/corner"
+        android:padding="12dp"
+        android:hint="Me"/>
 
     <Button
-        android:layout_width="50dp"
-        android:id="@+id/delete"
-        android:visibility="visible"
-        android:layout_height="50dp"/>
-    <EditText
-        android:id="@+id/edit_fname"
-        android:hint="men"
+        android:id="@+id/btn_calculate"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <EditText
-        android:id="@+id/edit_sname"
-        android:hint="women"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/pink"
+        android:layout_marginTop="24dp"
+        android:text="Calculate"/>
     <Button
-        android:id="@+id/bTn_next"
-        android:text="next"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-    <Button
-        android:id="@+id/bTn_history"
+        android:id="@+id/btn_history"
         android:text="History"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/pink"/>
+
 
 </LinearLayout>
